# EpochAI

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  constraints.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
docs/: ENV FILE TEMPLATE.md
docs/architecture/: STRUCTURE.md
docs/cheatsheets/: PRECOMMIT_CHEATSHEET.md
docs/diagrams/: ERD.drawio.xml
epochai/common/: config_loader.py  config_validator.py  data_utils.py  enums.py  logging_config.py  wikipedia_utils.py
epochai/common/config/: config_loader.py  config_validator.py
epochai/common/dao/: collected_contents_dao.py  collection_configs_dao.py  content_metadata_schemas_dao.py  run_statuses_dao.py  run_types_dao.py  track_schema_migrations_dao.py  validation_statuses_dao.py
epochai/common/database/: collection_config_manager.py  collection_targets_manager.py  database.py  models.py
epochai/common/database/dao/: attempt_statuses_dao.py  check_collection_targets_dao.py  cleaned_data_dao.py  cleaned_data_metadata_schemas_dao.py  collected_content_metadata_dao.py  collected_content_types_dao.py  collected_contents_dao.py  collection_attempts_dao.py  collection_configs_dao.py  collection_statuses_dao.py  collection_targets_dao.py  collection_types_dao.py  collector_names_dao.py  content_metadata_schemas_dao.py  debug_wikipedia_results_dao.py  error_types_dao.py  link_attempts_to_runs_dao.py  raw_data_dao.py  raw_data_metadata_schemas_dao.py  run_collection_metadata_dao.py  run_statuses_dao.py  run_types_dao.py  track_schema_migrations_dao.py  validation_statuses_dao.py
epochai/common/database/deprecated_migrations/: 001_initial_schema.sql  002_insert_data.sql  003_migrate_config.sql  migration_runner.py
epochai/common/database/migrations/: 001_initial_schema.sql  COMMANDS.md  env.py  migration_runner.py
epochai/common/database/migrations/versions/: 001_initial_schema.py
epochai/common/migrations/: 001_initial_schema.sql  migration_runner.py
epochai/common/protocols/: metadata_schema_dao_protocol.py
epochai/common/services/: cleaning_service.py  collection_attempts_service.py  collection_reports_service.py  collection_targets_manager.py  collection_targets_query_service.py  raw_data_service.py  target_status_management_service.py
epochai/common/utils/: data_utils.py  database_utils.py  decorators.py  dynamic_schema_utils.py  fivethirtyeight_utils.py  schema_utils.py  wikipedia_utils.py
epochai/data_collection/: base_collector.py  checker.py  collector.py  debug.py  importer.py  wikipedia_collector.py
epochai/data_collection/collectors/: base_collector.py  fivethirtyeight_collector.py  wikipedia_collector.py
epochai/data_collection/importers/: fivethirtyeight_csv_importer.py
epochai/data_collection/savers/: base_saver.py  fivethirtyeight_saver.py  wikipedia_saver.py
epochai/data_processing/: cleaner.py
epochai/data_processing/cleaners/: base_cleaner.py  fivethirtyeight_cleaner.py  wikipedia_cleaner.py
epochai/data_processing/cleaning/: base_cleaner.py  wikipedia_cleaner.py
epochai/data_processing/services/: cleaning_service.py
epochai/database_savers/: wikipedia_saver.py
epochai/politicsai/ml_tools/: election_nowcaster.py
predictai/common/: config_loader.py  config_validator.py  data_utils.py  wikipedia_utils.py
predictai/data_collection/: debug.py  wikipedia_collector.py
tests/: conftest.py  test_data_utils.py  test_wikipedia_utils.py
tests/unit_tests/: test_base_cleaner.py  test_config_loader.py  test_config_validator.py  test_database.py  test_wikipedia_cleaner.py  test_wikipedia_utils.py
